[gd_scene load_steps=38 format=3 uid="uid://dq5geasf1p7i0"]

[ext_resource type="Script" uid="uid://bh3l30wk7se8e" path="res://Scenes/Museum Level/Museum Scripts/enter_passcode.gd" id="1_0po7h"]
[ext_resource type="Texture2D" uid="uid://dm33cnnomvr3m" path="res://Assets/Sprites/UI/Buttons/button_one_normal.png" id="2_kvurg"]
[ext_resource type="Texture2D" uid="uid://d4d7r57cw8mil" path="res://Assets/Sprites/UI/Buttons/button_seven_dark.png" id="3_tm1qp"]
[ext_resource type="Texture2D" uid="uid://ca5iu18ukj8b3" path="res://Assets/Sprites/UI/Buttons/button_one_light.png" id="4_tr8lf"]
[ext_resource type="Texture2D" uid="uid://l36osulfrx2b" path="res://Assets/Sprites/UI/Buttons/button_two_normal.png" id="5_w2mny"]
[ext_resource type="Texture2D" uid="uid://haevde4oit" path="res://Assets/Sprites/UI/Buttons/button_two_dark.png" id="6_1snqi"]
[ext_resource type="Texture2D" uid="uid://b3u422w1vs27s" path="res://Assets/Sprites/UI/Buttons/button_two_light.png" id="7_ftmsm"]
[ext_resource type="Texture2D" uid="uid://co1n8g80k4unl" path="res://Assets/Sprites/UI/Buttons/button_three_normal.png" id="8_sr4dv"]
[ext_resource type="Texture2D" uid="uid://ddyhkfmcsrrtj" path="res://Assets/Sprites/UI/Buttons/button_three_dark.png" id="9_wtjsu"]
[ext_resource type="Texture2D" uid="uid://ruil3r28ewcc" path="res://Assets/Sprites/UI/Buttons/button_three_light.png" id="10_taaiq"]
[ext_resource type="Texture2D" uid="uid://bt5r7x5oi27ca" path="res://Assets/Sprites/UI/Buttons/button_four_normal.png" id="11_xy3iy"]
[ext_resource type="Texture2D" uid="uid://vgdjfjrr0vrl" path="res://Assets/Sprites/UI/Buttons/button_four_dark.png" id="12_6vkht"]
[ext_resource type="Texture2D" uid="uid://rqni2r1waf1o" path="res://Assets/Sprites/UI/Buttons/button_four_light.png" id="13_e6viw"]
[ext_resource type="Texture2D" uid="uid://bw747sj7iquis" path="res://Assets/Sprites/UI/Buttons/button_five_normal.png" id="14_bhg1m"]
[ext_resource type="Texture2D" uid="uid://dmc47nouw3dm7" path="res://Assets/Sprites/UI/Buttons/button_five_dark.png" id="15_m3bhl"]
[ext_resource type="Texture2D" uid="uid://b6102nr7q7i7s" path="res://Assets/Sprites/UI/Buttons/button_five_light.png" id="16_am378"]
[ext_resource type="Texture2D" uid="uid://vfis4eb2q0nw" path="res://Assets/Sprites/UI/Buttons/button_six_normal.png" id="17_4j0aj"]
[ext_resource type="Texture2D" uid="uid://cce1mkplru3nq" path="res://Assets/Sprites/UI/Buttons/button_six_dark.png" id="18_6mkkq"]
[ext_resource type="Texture2D" uid="uid://cghaw1245swuw" path="res://Assets/Sprites/UI/Buttons/button_six_light.png" id="19_30wcr"]
[ext_resource type="Texture2D" uid="uid://h8og1vacw4fp" path="res://Assets/Sprites/UI/Buttons/button_seven_normal.png" id="20_74188"]
[ext_resource type="Texture2D" uid="uid://uqb4qgyu7bpo" path="res://Assets/Sprites/UI/Buttons/button_seven_light.png" id="21_tdx82"]
[ext_resource type="Texture2D" uid="uid://d1nn4iypt5rk3" path="res://Assets/Sprites/UI/Buttons/button_eight_normal.png" id="22_ldycj"]
[ext_resource type="Texture2D" uid="uid://ctfl2x45qt8tr" path="res://Assets/Sprites/UI/Buttons/button_eight_dark.png" id="23_gd0jh"]
[ext_resource type="Texture2D" uid="uid://ll3nc6envwsy" path="res://Assets/Sprites/UI/Buttons/button_eight_light.png" id="24_464gv"]
[ext_resource type="Texture2D" uid="uid://bnlygern7nwrj" path="res://Assets/Sprites/UI/Buttons/button_nine_normal.png" id="25_7s1f2"]
[ext_resource type="Texture2D" uid="uid://dks263jyqch1m" path="res://Assets/Sprites/UI/Buttons/button_nine_dark.png" id="26_ng5sg"]
[ext_resource type="Texture2D" uid="uid://d4monwuf2ofsh" path="res://Assets/Sprites/UI/Buttons/button_nine_light.png" id="27_tpyah"]
[ext_resource type="Texture2D" uid="uid://mr6u4fj8w5he" path="res://Assets/Sprites/UI/Buttons/button_zero_normal.png" id="28_ov8c1"]
[ext_resource type="Texture2D" uid="uid://d0i248xlo0etq" path="res://Assets/Sprites/UI/Buttons/button_zero_dark.png" id="29_q3fju"]
[ext_resource type="Texture2D" uid="uid://ddqopiy432n5u" path="res://Assets/Sprites/UI/Buttons/button_zero_light.png" id="30_3ngnj"]
[ext_resource type="Texture2D" uid="uid://l0ydxmok18em" path="res://Assets/Sprites/UI/Buttons/button_enter_normal.png" id="31_dbpto"]
[ext_resource type="FontFile" uid="uid://bcomx8bxn0j1" path="res://Text/PressStart2P.ttf" id="31_xp6km"]
[ext_resource type="Texture2D" uid="uid://x6phuj1csr3b" path="res://Assets/Sprites/UI/Buttons/button_enter_dark.png" id="32_xvjut"]
[ext_resource type="Texture2D" uid="uid://bpqcl0a4b5mrk" path="res://Assets/Sprites/UI/Buttons/button_enter_light.png" id="33_jhx5l"]
[ext_resource type="Texture2D" uid="uid://bjoqwm6tbcro8" path="res://Assets/Sprites/UI/Buttons/button_clear_normal.png" id="34_g22u4"]
[ext_resource type="Texture2D" uid="uid://dyigdtsxvcf02" path="res://Assets/Sprites/UI/Buttons/button_clear_dark.png" id="35_oyu17"]
[ext_resource type="Texture2D" uid="uid://c3qdrtr8cvhah" path="res://Assets/Sprites/UI/Buttons/button_clear_light.png" id="36_8wlf8"]

[node name="EnterPasscode" type="Node2D"]
script = ExtResource("1_0po7h")

[node name="BG" type="ColorRect" parent="."]
offset_left = -14.0
offset_top = -20.0
offset_right = 1158.0
offset_bottom = 822.0
color = Color(0.111197, 0.111197, 0.111197, 1)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 68.0
offset_top = 32.0
offset_right = 1109.0
offset_bottom = 165.0
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 284.0
offset_top = 183.0
offset_right = 892.0
offset_bottom = 770.0
color = Color(0.176419, 0.176419, 0.176419, 1)

[node name="GridContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 327.0
offset_top = 176.0
offset_right = 841.0
offset_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureButton1" type="TextureButton" parent="GridContainer"]
layout_mode = 2
offset_left = 56.0
offset_top = 34.0
offset_right = 72.0
offset_bottom = 50.0
scale = Vector2(7, 7)
texture_normal = ExtResource("2_kvurg")
texture_pressed = ExtResource("3_tm1qp")
texture_hover = ExtResource("4_tr8lf")
stretch_mode = 0

[node name="TextureButton2" type="TextureButton" parent="GridContainer"]
layout_mode = 2
offset_left = 206.0
offset_top = 34.0
offset_right = 222.0
offset_bottom = 50.0
scale = Vector2(7, 7)
texture_normal = ExtResource("5_w2mny")
texture_pressed = ExtResource("6_1snqi")
texture_hover = ExtResource("7_ftmsm")

[node name="TextureButton3" type="TextureButton" parent="GridContainer"]
layout_mode = 2
offset_left = 360.0
offset_top = 34.0
offset_right = 376.0
offset_bottom = 50.0
scale = Vector2(7, 7)
texture_normal = ExtResource("8_sr4dv")
texture_pressed = ExtResource("9_wtjsu")
texture_hover = ExtResource("10_taaiq")

[node name="TextureButton4" type="TextureButton" parent="GridContainer"]
layout_mode = 2
offset_left = 56.0
offset_top = 175.0
offset_right = 72.0
offset_bottom = 191.0
scale = Vector2(7, 7)
texture_normal = ExtResource("11_xy3iy")
texture_pressed = ExtResource("12_6vkht")
texture_hover = ExtResource("13_e6viw")

[node name="TextureButton5" type="TextureButton" parent="GridContainer"]
layout_mode = 2
offset_left = 206.0
offset_top = 175.0
offset_right = 222.0
offset_bottom = 191.0
scale = Vector2(7, 7)
texture_normal = ExtResource("14_bhg1m")
texture_pressed = ExtResource("15_m3bhl")
texture_hover = ExtResource("16_am378")

[node name="TextureButton6" type="TextureButton" parent="GridContainer"]
layout_mode = 2
offset_left = 360.0
offset_top = 175.0
offset_right = 376.0
offset_bottom = 191.0
scale = Vector2(7, 7)
texture_normal = ExtResource("17_4j0aj")
texture_pressed = ExtResource("18_6mkkq")
texture_hover = ExtResource("19_30wcr")

[node name="TextureButton7" type="TextureButton" parent="GridContainer"]
layout_mode = 2
offset_left = 56.0
offset_top = 320.0
offset_right = 72.0
offset_bottom = 336.0
scale = Vector2(7, 7)
texture_normal = ExtResource("20_74188")
texture_pressed = ExtResource("18_6mkkq")
texture_hover = ExtResource("21_tdx82")

[node name="TextureButton8" type="TextureButton" parent="GridContainer"]
layout_mode = 2
offset_left = 206.0
offset_top = 320.0
offset_right = 222.0
offset_bottom = 336.0
scale = Vector2(7, 7)
texture_normal = ExtResource("22_ldycj")
texture_pressed = ExtResource("23_gd0jh")
texture_hover = ExtResource("24_464gv")

[node name="TextureButton9" type="TextureButton" parent="GridContainer"]
layout_mode = 2
offset_left = 360.0
offset_top = 320.0
offset_right = 376.0
offset_bottom = 336.0
scale = Vector2(7, 7)
texture_normal = ExtResource("25_7s1f2")
texture_pressed = ExtResource("26_ng5sg")
texture_hover = ExtResource("27_tpyah")

[node name="TextureButton0" type="TextureButton" parent="GridContainer"]
layout_mode = 2
offset_left = 206.0
offset_top = 462.0
offset_right = 222.0
offset_bottom = 478.0
scale = Vector2(7, 7)
texture_normal = ExtResource("28_ov8c1")
texture_pressed = ExtResource("29_q3fju")
texture_hover = ExtResource("30_3ngnj")

[node name="ButtonEnter" type="TextureButton" parent="GridContainer"]
layout_mode = 0
offset_left = 637.0
offset_top = 175.0
offset_right = 653.0
offset_bottom = 191.0
scale = Vector2(7, 7)
texture_normal = ExtResource("31_dbpto")
texture_pressed = ExtResource("32_xvjut")
texture_hover = ExtResource("33_jhx5l")

[node name="ButtonClear" type="TextureButton" parent="GridContainer"]
layout_mode = 0
offset_left = 637.0
offset_top = 320.0
offset_right = 653.0
offset_bottom = 336.0
scale = Vector2(7, 7)
texture_normal = ExtResource("34_g22u4")
texture_pressed = ExtResource("35_oyu17")
texture_hover = ExtResource("36_8wlf8")

[node name="Label" type="Label" parent="."]
offset_left = 74.0
offset_top = 44.0
offset_right = 1095.0
offset_bottom = 155.0
theme_override_fonts/font = ExtResource("31_xp6km")
theme_override_font_sizes/font_size = 108
